# backend/microservices/user-service/src/docs/users.openapi.yaml
@@ -85,3 +85,20 @@ paths:
               schema: { $ref: '#/components/schemas/User' }
         '401':
           description: Unauthorized
+
+  /users/getUsers:
+    get:
+      tags: [Users]
+      summary: Get all users
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items: { $ref: '#/components/schemas/User' }
+        '401':
+          description: Unauthorized
